@@ -5,6 +5,9 @@ Trunk (unreleased)
 Changes
 -------
 
+- The GUI enforces the 'runcase' name for the script. This allows more robust
+  handling of the runcase/XML file link, as one of the 2 names is fixed.
+
 - Allow time-varying rotor velocity for turbomachinery.
 
 - Mesh-joing based turbomachinery model robustness is also improved by
